--- a/lab-2/src/Components/css/AdminPage.css
+++ b/lab-2/src/Components/css/AdminPage.css
@@ -45,8 +45,8 @@
 }
 
 .pimage {
-    width: 70px;
-    height: 70px;
+    width: 100px;
+    height: 100px;
     overflow: hidden;
     border-radius: 15%;
     border: var(--white) 2px solid;
@@ -100,8 +100,8 @@
     padding: 0 10px;
     margin: 0 auto 5px auto;
     width: fit-content;
-    position: relative;
-    left: 20px; 
+    transform: translateX(20px);
+    transition: transform 0.3s;
 }
 
 .active:hover {
@@ -112,7 +112,7 @@
     padding: 0 10px;
     margin: 0 auto 5px auto;
     width: fit-content;
-    transition: position 2s;
+    transition: transform 0.3s;
 }
 
 .btns {
@@ -148,6 +148,7 @@ li {
     transition: padding 0.2s, position 2s;
     padding: 0 10px;
     margin-bottom: 5px;
+    transition: transform 0.3s;
 }
 
 li:hover {
@@ -158,4 +159,5 @@ li:hover {
     padding: 0 10px;
     border-radius: 5px;
     cursor: pointer;
+    transition: transform 0.3s; 
 }
