CRUD - frontend backend

--- a/lab-2/src/Components/css/Users.css
+++ b/lab-2/src/Components/css/Users.css
@@ -65,14 +65,11 @@ button, input, label {
 .listContainer {
     width: 50%;
     height: 100%;
-    background-color: var(--secondaryWhite);
-    border-radius: 12px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     display: flex;
     flex-direction: column;
     max-height: 80vh;
     overflow-y: auto;
-
+    overflow-x: hidden;
     gap: 15px;
 }
 
@@ -195,7 +192,7 @@ button, input, label {
     color: var(--white);
 }
 
-/* user info on right */
+/* right info */
 
 .rightMainUserInfo {
     padding: 20px;
@@ -208,17 +205,53 @@ button, input, label {
 }
 
 .rightUserImage {
-    width: 30%;
-    height: 200px;
-    overflow: hidden;
+    position: relative;
     border-radius: 12px;
-    
+    width: 45%;
+    height: 200px;
+    overflow: hidden; 
 }
-
+  
 .rightUserImage img {
-    width: 100%; 
+    width: 100%;
     height: 100%;
     object-fit: cover;
+}
+  
+.rightUserImage::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%; 
+    height: 80%; 
+    background-image: url('https://cdn-icons-png.flaticon.com/512/3342/3342137.png');
+    background-size: contain; 
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.rightUserImage::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.5);
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.rightUserImage:hover::before {
+  opacity: 1;
+}
+
+.rightUserImage:hover::after {
+  opacity: 0.5; 
 }
 
 .rightUserTitle {
@@ -357,14 +390,21 @@ button, input, label {
     height: 80vh;
     padding: 0 10px;
     display: flex;
+    flex-direction: column;
+}
+
+.createUserContainer form{
+    display: flex;
 }
 
 .createUserLeft {
-    padding: 10px 20px;
-    width: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 10px 0;
+    width: 75%;
     height: 100%;
     position: relative;
-    left: 20px;
 }
 
 .cuTitle {
@@ -375,25 +415,24 @@ button, input, label {
 .cuInputs {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 90%;
     height: 80%;
     justify-content: space-evenly;
 }
 
 .cInput {
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
     align-items: center;
 }
 
 .cuInputs label {
     font-size: 24px;
-    width:20%;
+    width:30%;
 }
 
 .cuInputs input {
-    width: 80%;
-    margin-right: 100px;
+    width: 70%;
     border-radius: 10px;
     border: 1px solid var(--blackSecondary);
     font-size: 24px;
@@ -401,18 +440,19 @@ button, input, label {
 }
 
 .createUserRight {
-    width: 30%;
+    width: 40%;
     height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 50px;
 
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .inputPic {
-    width: 80%;
-    height: 45%;
+    width: 15em;
+    height: 15em;
     overflow: hidden;
     border-radius: 12px;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
