--- a/lab-2/src/Components/css/Users.css
+++ b/lab-2/src/Components/css/Users.css
@@ -444,6 +444,12 @@ button, input, label {
     position: relative;
 }
 
+.errorMessage {
+    text-align: center;
+    color: #F53A33;
+    font-weight: bold;
+    font-size: 12px;
+}
 .createError {
     color: #F53A33;
     font-weight: bold;
