--- a/lab-2/src/Components/css/Users.css
+++ b/lab-2/src/Components/css/Users.css
@@ -59,7 +59,7 @@ button, input, label {
 
     margin: 0 10px;
     width: 98.5%;
-    height: 81.5vh;
+    height: 80vh;
 }
 
 .defaultInfoContainer {
@@ -91,7 +91,7 @@ button, input, label {
 .userSearch {
     display: flex;
     justify-content: center;
-    margin: auto;
+    margin:  0 auto;
     height: 80px;
     width: 80%;
     align-items: center;
@@ -158,7 +158,7 @@ button, input, label {
 .userCard {
     background: linear-gradient(-120deg, var(--black), var(--blackSecondary));
     width: 90%;
-    margin: auto;
+    margin: 0 auto;
     padding: 20px;
     border-radius: 12px;
     color: var(--blackSecondary);
@@ -167,6 +167,14 @@ button, input, label {
     gap: 20px;
 
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
+
+.zeroUsers {
+    width: 80%;
+    color: var(--black);
+    margin: auto;
+    text-align: center;
+    font-size: 1em;
 }
 
 .mainInfo {
@@ -785,6 +793,16 @@ button, input, label {
     
 }
 
-@media only screen and (max-width: 1363px) {
-    
+@media only screen and (max-height: 840px) {
+    .infoContainer{
+        height: 97%;
+    }
+
+    .rightBtns {
+        flex-direction: row;
+    }
+
+    .rightBtns button{
+        font-size: 10px;
+    }
 }
