--- a/lab-2/src/Components/css/Client.css
+++ b/lab-2/src/Components/css/Client.css
@@ -377,6 +377,19 @@ ul{
     background-color: rgb(135, 30, 30);
 }
 
+.noProd {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 5em;
+}
+
+.noProd img {
+    width: 30em;
+    height: 30em;
+}
+
 .tkn {
     position: absolute;
     bottom: 5px;
